prog/1stPartyLibs/quirrel/quirrel/testData/exec/runtime_type_check/assign_wrong_type_06.nut
local y: int = 5

function fn() {
    y = 8
    y += 4.5
}

fn()

println(y)

